fix issues of card container alignment on 1440px

--- a/src/components/card/Card.module.css
+++ b/src/components/card/Card.module.css
@@ -35,6 +35,7 @@
 
 .productImage {
   height: 29.7rem;
+  max-height: 100%;
   max-width: 90%;
   border-radius: 0.8rem;
   transition: all 0.3s;
